feat: refactor response and request DTOs to use records, remove unnecessary comments and improve code readability